# challenging_ds

./: .gitignore  01_eda.ipynb  main.py  pyproject.toml
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_modeling.ipynb
src/: config.py  data_loader.py  preprocessing.py
